pocket-id/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name:      pocket-id
  namespace: pocket-id
spec:
  parentRefs:
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: web
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: websecure
  hostnames:
    - pocket-id.lunics.cloud
  rules:
    - matches:
        - path:
            type:  PathPrefix
            value: /
      backendRefs:
        - name: pocket-id
          port: 80
